fix: z-link text wrap issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,5 +5,5 @@ body{
 }
 
 .item a, .item .cat-button{
-    @apply flex justify-between p-4 bg-gray-900 min-w-full mb-4 rounded-xl text-[lavender] hover:bg-gray-800 transition-colors text-left cursor-pointer;
+    @apply flex justify-between items-center p-4 bg-gray-900 min-w-full mb-4 rounded-xl text-[lavender] hover:bg-gray-800 transition-colors text-left cursor-pointer;
 }
